--- a/index-link.html
+++ b/index-link.html
@@ -17,7 +17,7 @@
 <body>
 <h1>Test with &lt;link&gt;</h1>
 <script>
-  navigator.serviceWorker.register("/service-worker.js").then(
+  navigator.serviceWorker.register("./service-worker.js").then(
     sw => console.log(sw)
   )
 </script>
