--- a/index-dataurl-dynamic.html
+++ b/index-dataurl-dynamic.html
@@ -1,4 +1,22 @@
-{
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset='utf-8'>
+  <meta name="viewport" content="width=device-width, initial-scale=1" >
+  <meta id='theThemeColor' name='theme-color' content='#4169e1' >
+  <meta name="description" content="DataURL Manifest Test" >
+
+  <link id='theFavicon' rel='icon' type='image/png' href='/favicon.png' >
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120.png" >
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180.png" >
+  <meta name="mobile-web-app-capable" content="yes" >
+  <meta name="apple-mobile-web-app-title" content="DataURL Manifest Test" >
+  <meta name="apple-mobile-web-app-status-bar-style" content="white" >
+</head>
+<body>
+<h1>Test with dynamic <code>dataurl</code>s</h1>
+<script>
+const manifest = JSON.stringify({
   "background_color": "#ffffff",
   "theme_color": "#4169e1",
   "name": "Manifest DataURL test",
@@ -53,4 +71,15 @@
       "type": "image/png"
     }
   ]
-}
+})
+document.head.insertAdjacentHTML('beforeend', `<link rel='manifest' href='data:application/manifest+json;base64,${btoa(manifest)}' >`)
+</script>
+
+<script>
+  navigator.serviceWorker.register("./service-worker.js").then(
+    sw => console.log(sw)
+  )
+</script>
+
+</body>
+</html>
